# langchain

./: .agentrules  .env.example  .gitignore  README.md  backend.py  index.html  pyproject.toml  smart_bot_section1.py
03_langchain_foundations/: README.md  core_concepts.ipynb  core_concepts.py  output_parsers_demo.py  output_parsers_final.py  prompt_messages.py  prompt_templates_all.py  working_with_llms.py
04_chain_patterns/: README.md  chains_v1.py
05_document_loading_and_embeddings/: README.md  document_loaders.py  embeddings.py  text_splitters.py  vector_stores.py
06_rag_architecture/: README.md  advanced_rag.py  conversation_memory.py  rag_pipeline.py  research_assistant.py  research_ui.py
07_langgraph/: 01_first_graph.py  02_langgraph_core.py  03_conditional_edges.py  04_cycles_loops.py  05_checkpointing.py  06_human_in_loop.py  07_agent_handoffs.py  README.md  my_trainning.py
docs/: chunk_size_guidelines.md  semantic_chunking.md  vector_store_options.md
projects/smart_bot/: README.md  smart_bot_section1.py
