[project]
name = "my_course_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "langchain-community>=0.4.1",
    "bs4>=0.0.2",
    "pypdf>=6.10.2",
    "langchain-ollama>=1.1.0",
    "sentence-transformers>=5.4.1",
    "langchain-chroma>=1.1.0",
]
